--- a/Scrabble/Scrabble/Scrabble.csproj
+++ b/Scrabble/Scrabble/Scrabble.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="board\Scrabbleboard.cs" />
+    <Compile Include="board\Scrabblefield.cs" />
+    <Compile Include="dictionary\WordDictionary.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
